--- a/sng1.html
+++ b/sng1.html
@@ -106,20 +106,16 @@ div.example {
     }
     .dethead{font-family: 'Nunito Sans', sans-serif;font-size: 20px;font-weight: bold;}
 .detp{font-family: 'Nunito Sans', sans-serif;font-size: 20px;font-weight: lighter}
-.det{text-align: center;}
+.det{text-align: left; padding-left: 10px;}
 .bg {
   /* The image used */
-  background-image: url("img/cmusic.jpg");
 
-  /* Full height */
-  height: 50%; 
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
+width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
+
+
 .caption {
   position: absolute;
   left: 20px;
@@ -302,7 +298,7 @@ div.example {
       </ul></div>
       
       <div style="width:100%;height:50px;"></div>
-       <div class="det"> <img src="img/cp.png" style="display:block;margin-left:auto;margin-right:auto;">
+       <div class="det"> <img src="img/cmusic.jpg" class="bg">
         <p class="dethead">Carol Pudding</p>
         <p class="detp">Alan Jose Santo</p></div>
         <div class="auds"><div class="audio-player">
