--- a/sng1.html
+++ b/sng1.html
@@ -110,8 +110,7 @@ div.example {
 .bg {
   /* The image used */
 
-width: 100%;
-  height: 200px;
+width: fit-content;
   object-fit: cover;
 }
 
@@ -298,7 +297,7 @@ width: 100%;
       </ul></div>
       
       <div style="width:100%;height:50px;"></div>
-       <div class="det"> <img src="img/cmusic.jpg" class="bg">
+       <div class="det"> <img src="img/alb.png" class="bg">
         <p class="dethead">Carol Pudding</p>
         <p class="detp">Alan Jose Santo</p></div>
         <div class="auds"><div class="audio-player">
