--- a/sng2.html
+++ b/sng2.html
@@ -300,11 +300,11 @@ font-family: 'Roboto Mono', monospace;font-size: 11px;font-weight: bold;}
     <div class="head" ><img src="img/logo.png"width="33" height="33"><img class="ic" src="img/icon.png" onclick="myFunction()" width="43" height="43" ></div>
     <div style="width: 100%; height: 20px; background-color: white;"></div>
     <div><ul id="ajs">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#news">Releases</a></li>
-        <li><a href="#contact">Artists</a></li>
-        <li><a href="#about">Games</a></li>
-        <li><a href="#about">Gallery</a></li>
+        <li><a href="https://realityaudiostudio.github.io/mixme/">Home</a></li>
+        <li><a href="https://realityaudiostudio.github.io/mixme/release.html">Releases</a></li>
+        <li><a href="https://realityaudiostudio.github.io/mixme/art.html">Artists</a></li>
+        <li><a href="https://realityaudiostudio.github.io/mixme/games.html">Games</a></li>
+        <li><a href="#about">About</a></li>
       </ul></div>
       
       <div style="width:100%;height:50px;"></div>
