--- a/sng1.html
+++ b/sng1.html
@@ -153,6 +153,13 @@ font-family: 'Roboto Mono', monospace;font-size: 11px;font-weight: bold;}
 		
 			display: flex;
 			justify-content: center;
+		align-items: center;
+      position: fixed;
+  bottom: 0;
+  background-color: white;
+  width: 100%;
+  border-top: 2px solid rgb(0, 0, 0);
+
 
 		}
         .audio-player {
