--- a/sng1.html
+++ b/sng1.html
@@ -148,12 +148,12 @@ font-family: 'Roboto Mono', monospace;font-size: 11px;font-weight: bold;}
 
    /* Audio playerinte code aan tto ith*/ 
 	.auds { 
-			padding: 0;
+			padding: 5px;
 			margin: 0;
 		
 			display: flex;
 			justify-content: center;
-		align-items: center;
+      align-items: center;
       position: fixed;
   bottom: 0;
   background-color: white;
