--- a/sng2.html
+++ b/sng2.html
@@ -148,11 +148,17 @@ font-family: 'Roboto Mono', monospace;font-size: 11px;font-weight: bold;}
 
    /* Audio playerinte code aan tto ith*/ 
 	.auds { 
-			padding: 0;
+			padding: 5px;
 			margin: 0;
 		
 			display: flex;
 			justify-content: center;
+      align-items: center;
+      position: fixed;
+  bottom: 0;
+  background-color: white;
+  width: 100%;
+  border-top: 2px solid rgb(0, 0, 0);
 
 		}
         .audio-player {
