--- a/sng5.html
+++ b/sng5.html
@@ -148,11 +148,17 @@ font-family: 'Roboto Mono', monospace;font-size: 11px;font-weight: bold;}
 
    /* Audio playerinte code aan tto ith*/ 
 	.auds { 
-			padding: 0;
+			padding: 5px;
 			margin: 0;
 		
 			display: flex;
 			justify-content: center;
+      align-items: center;
+      position: fixed;
+  bottom: 0;
+  background-color: white;
+  width: 100%;
+  border-top: 2px solid rgb(0, 0, 0);
 
 		}
         .audio-player {
@@ -300,10 +306,10 @@ font-family: 'Roboto Mono', monospace;font-size: 11px;font-weight: bold;}
     <div class="head" ><img src="img/logo.png"width="33" height="33"><img class="ic" src="img/icon.png" onclick="myFunction()" width="43" height="43" ></div>
     <div style="width: 100%; height: 20px; background-color: white;"></div>
     <div><ul id="ajs">
-        <li><a href="https://realityaudiostudio.github.io/mixme/">Home</a></li>
-        <li><a href="https://realityaudiostudio.github.io/mixme/release.html">Releases</a></li>
-        <li><a href="https://realityaudiostudio.github.io/mixme/art.html">Artists</a></li>
-        <li><a href="https://realityaudiostudio.github.io/mixme/games.html">Games</a></li>
+        <li><a href="https://realityaudiostudio.github.io/">Home</a></li>
+        <li><a href="https://realityaudiostudio.github.io/release.html">Releases</a></li>
+        <li><a href="https://realityaudiostudio.github.io/art.html">Artists</a></li>
+        <li><a href="https://realityaudiostudio.github.io/games.html">Games</a></li>
         <li><a href="#about">About</a></li>
       </ul></div>
       
