--- a/sng7.html
+++ b/sng7.html
@@ -134,13 +134,13 @@ font-family: 'Roboto Mono', monospace;font-size: 11px;font-weight: bold;}
   position: relative;
   max-width: 800px; /* Maximum width */
   margin: 0 auto; /* Center it */
+	background-image: linear-gradient(180deg,transparent,rgba(37,37,37,0.61),#111);
 }
 
 .container .content {
   position: absolute; /* Position the background text */
   bottom: 0; /* At the bottom. Use top:0 to append it to the top */
-  background: rgb(0, 0, 0); /* Fallback color */
-  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+ 
   color: #f1f1f1; /* Grey text */
   width: 100%; /* Full width */
 }
