--- a/sng7.html
+++ b/sng7.html
@@ -139,16 +139,16 @@ font-family: 'Roboto Mono', monospace;font-size: 11px;font-weight: bold;}
 .container .content {
   position: absolute; /* Position the background text */
   bottom: 0; /* At the bottom. Use top:0 to append it to the top */
- background: rgb(0, 0, 0); /* Fallback color */
-	background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
   color: #f1f1f1; /* Grey text */
+    height:3.4rem;
+    background-image: linear-gradient(180deg,transparent,rgba(37,37,37,0.61),#111);
   width: 100%; /* Full width */
 }
-.banner__fadeBottom{
-    
+/*.banner__fadeBottom{
+    color: #f1f1f1; /* Grey text
     height:2.4rem;
     background-image: linear-gradient(180deg,transparent,rgba(37,37,37,0.61),#111);
-}
+}*/
 
    /* Audio playerinte code aan tto ith*/ 
 	.auds { padding: 5px;
