--- a/sng7.html
+++ b/sng7.html
@@ -139,7 +139,7 @@ font-family: 'Roboto Mono', monospace;font-size: 11px;font-weight: bold;}
 .container .content {
   position: absolute; /* Position the background text */
   bottom: 0; /* At the bottom. Use top:0 to append it to the top */
-  color: #f1f1f1; /* Grey text */
+  color: #ffffff; /* Grey text */
     height:6.4rem;
     background-image: linear-gradient(180deg,transparent,rgba(37,37,37,0.61),#111);
   width: 100%; /* Full width */
