--- a/sng4.html
+++ b/sng4.html
@@ -316,7 +316,7 @@ font-family: 'Roboto Mono', monospace;font-size: 11px;font-weight: bold;}
   height: var(--sound-button-width);
   cursor: pointer;
   padding: 0;
-}
+}.get a{text-decoration: none;color: white;}
     /* Audio Player kazhinjtto */
   </style>
 </head>
@@ -369,7 +369,7 @@ font-family: 'Roboto Mono', monospace;font-size: 11px;font-weight: bold;}
             <p><strong>DOP</strong> Nidheesh J Martin</p>
           </div>
         </div>
-        <div class="get">Download</div>
+        <div class="get"><a href="https://drive.google.com/uc?export=download&id=1i2I3X_5k_UnXTefE86KUuNpdcK4vEYt1" download="alan">Download</a></div>
     <!--randamathe-->
     
         <script> function myFunction() {
