--- a/sng6.html
+++ b/sng6.html
@@ -162,7 +162,7 @@ font-family: 'Roboto Mono', monospace;font-size: 11px;font-weight: bold;}
     height:6.4rem;
     background-image: linear-gradient(180deg,transparent,rgba(37,37,37,0.61),#111);
   width: 100%; /* Full width */
-}
+}.get a{text-decoration: none;color: white;}
 
 
    /* Audio playerinte code aan tto ith*/ 
@@ -367,7 +367,7 @@ font-family: 'Roboto Mono', monospace;font-size: 11px;font-weight: bold;}
             <p><strong>Scoring</strong> Alan Jose Santo</p>
           </div>
         </div>
-        <div class="get">Download</div>
+        <div class="get"><a href="https://drive.google.com/uc?export=1nQDxXyMQWubzeiYW0A4ozKpMscGLOO8c" download="alan">Download</a></div>
     <!--randamathe-->
     
         <script> function myFunction() {
