--- a/sng7.html
+++ b/sng7.html
@@ -41,7 +41,7 @@
     display: table;
   }
   
-  
+  .get a{text-decoration: none;color: white;}
 .ic{margin: 0;
   position: absolute;
   left: 50%;
@@ -374,7 +374,7 @@ font-family: 'Roboto Mono', monospace;font-size: 11px;font-weight: bold;}
             <p><strong>DOP</strong> Santo Jose</p>
           </div>
         </div>
-        <div class="get">Download</div>
+        <div class="get"><a href="https://drive.google.com/uc?export=download&id=1jQX2Xu8SXxNhaKQ2hus2ZitKOzdqvf1U" download="alan">Download</a></div>
     <!--randamathe-->
     
         <script> function myFunction() {
