--- a/sng1.html
+++ b/sng1.html
@@ -318,6 +318,7 @@ font-family: 'Roboto Mono', monospace;font-size: 11px;font-weight: bold;}
   cursor: pointer;
   padding: 0;
 }
+.get a{text-decoration: none;color: white;}
     /* Audio Player kazhinjtto */
   </style>
 </head>
@@ -370,7 +371,7 @@ font-family: 'Roboto Mono', monospace;font-size: 11px;font-weight: bold;}
             <p><strong>DOP</strong> Nidheesh J Martin</p>
           </div>
         </div>
-        <div class="get">Download</div>
+        <div class="get"><a href="https://drive.google.com/uc?export=download&id=1a8Govfs0uda52HTD4lgEexHkXWI4vt-1" download="alan">Download</a></div>
     <!--randamathe-->
     
         <script> function myFunction() {
