--- a/sng3.html
+++ b/sng3.html
@@ -100,7 +100,7 @@
   top: 15px;
   right: 35px;
   }
-}
+}.get a{text-decoration: none;color: white;}
 .subh {font-family: 'Nunito Sans', sans-serif;
 font-size: 20px;}
 div.example {
@@ -366,7 +366,7 @@ font-family: 'Roboto Mono', monospace;font-size: 11px;font-weight: bold;}
             <p><strong>DOP</strong> Milan Martin Santo</p>
           </div>
         </div>
-        <div class="get">Download</div>
+        <div class="get"><a href="https://drive.google.com/uc?export=download&id=1wRNzFca0e_1tjeIsYkODnI1UxzGQ5yLx" download="alan">Download</a></div>
     <!--randamathe-->
     
         <script> function myFunction() {
