--- a/sng5.html
+++ b/sng5.html
@@ -100,7 +100,7 @@
   top: 15px;
   right: 35px;
   }
-}
+}.get a{text-decoration: none;color: white;}
 .subh {font-family: 'Nunito Sans', sans-serif;
 font-size: 20px;}
 div.example {
@@ -368,7 +368,7 @@ font-family: 'Roboto Mono', monospace;font-size: 11px;font-weight: bold;}
             <p><strong>Scoring</strong> Alan Jose Santo</p>
           </div>
         </div>
-        <div class="get">Download</div>
+        <div class="get"><a href="https://drive.google.com/uc?export=download&id=1eM-jwFDf3oDs2PPKoZ66JDsx9gfpuGDV" download="alan">Download</a></div>
     <!--randamathe-->
     
         <script> function myFunction() {
