--- a/sng5.html
+++ b/sng5.html
@@ -279,6 +279,15 @@ color: #ffffff;
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+ body{width:400px;border:solid 1px;border-radius: 25px;padding: 10px;display: block;
+  margin-left: auto;
+  margin-right: auto;}
+  .sidenav {border-radius: 10px 0 0 0}
+  .auds{position: relative;padding-top: 30px;}
+  .mnimg{height: fit-content;}
+}
   </style>
 </head>
 <body>
