Times of Melodica

--- a/sng1.html
+++ b/sng1.html
@@ -335,7 +335,7 @@ DOP: Nidheesh J Martin</p>
   <div id="overlay" onclick="off()">
     <h3>Download</h3>
    <p>Lyrics</p>
-   <p>Original Soundtrack</p> 
+   <p>Original musical Soundtrack</p> 
   </div>
   <!--overkazhinj-->
   <script>
