--- a/sng9.html
+++ b/sng9.html
@@ -51,7 +51,7 @@ justify-content: space-between;padding: 5px;}
 width: 90%;height: 104px;padding:6px;border-radius: 9px;color: #ffffff;font-size: 18px;font-weight:50;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 margin: auto;}
-.mnimg{background-image: url(img/tombg.png); background-size:cover;width: 100%;height: 100%;padding: 0;margin: 0;}
+.mnimg{background-image: url(img/kfbg.png); background-size:cover;width: 100%;height: 100%;padding: 0;margin: 0;}
 .exp{ 
 color: #ffffff;
 }
@@ -302,18 +302,18 @@ color: #ffffff;
       <a href="https://realityaudiostudio.github.io/games.html">About</a>
     </div>
     <div style="width: 100%;height:250px;"></div>
-   <div class="exp"><div class="plr"><p style="font-size: 26px;height: 15px;font-weight: 500;">Times of Melodica</p>
-   <p style="font-size:15px;font-weight:200;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="12" height="12"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm1-8h4v2h-6V7h2v5z" fill="rgba(255,255,255,1)"/></svg> 2 mins | <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="12" height="12"><path fill="none" d="M0 0h24v24H0z"/><path d="M4 12h3a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2v-7C2 6.477 6.477 2 12 2s10 4.477 10 10v7a2 2 0 0 1-2 2h-3a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h3a8 8 0 1 0-16 0z" fill="rgba(255,255,255,1)"/></svg>  2.1 stereo mix | <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="12" height="12"><path fill="none" d="M0 0h24v24H0z"/><path d="M13 21v2h-2v-2H3a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h6a3.99 3.99 0 0 1 3 1.354A3.99 3.99 0 0 1 15 3h6a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1h-8zm7-2V5h-5a2 2 0 0 0-2 2v12h7zm-9 0V7a2 2 0 0 0-2-2H4v14h7z" fill="rgba(255,255,255,1)"/></svg>  Instrumental</p>
+   <div class="exp"><div class="plr"><p style="font-size: 26px;height: 15px;font-weight: 500;">Kaalpanthin</p>
+   <p style="font-size:15px;font-weight:200;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="12" height="12"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm1-8h4v2h-6V7h2v5z" fill="rgba(255,255,255,1)"/></svg> 2 mins | <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="12" height="12"><path fill="none" d="M0 0h24v24H0z"/><path d="M4 12h3a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2v-7C2 6.477 6.477 2 12 2s10 4.477 10 10v7a2 2 0 0 1-2 2h-3a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h3a8 8 0 1 0-16 0z" fill="rgba(255,255,255,1)"/></svg>  2.1 stereo mix | <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="12" height="12"><path fill="none" d="M0 0h24v24H0z"/><path d="M13 21v2h-2v-2H3a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h6a3.99 3.99 0 0 1 3 1.354A3.99 3.99 0 0 1 15 3h6a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1h-8zm7-2V5h-5a2 2 0 0 0-2 2v12h7zm-9 0V7a2 2 0 0 0-2-2H4v14h7z" fill="rgba(255,255,255,1)"/></svg>  Malayalam</p>
   <p style="font-size:12px;font-weight:50;">On Music: Alan Jose Santo</p>
 <p>Behind The Work</p>
 <div style="background:#ffffff;width:40px;height:4px;"></div>
 <p style="font-weight: 200;font-size:12px;">Music : Alan Jose Santo</br>
-  Production : Reality Audio Studio</br>
+  Lyrics : Sreedev Krishna S J</br>
   Streaming : Mix Me </br></p>
 <div style="padding:5px;text-align:center;background:white;color:#262626;width: 80px;height: 30px;font-size: 15px;font-weight: 400;" onclick="on()">Download</div></div>
 <div class="auds"><div class="audio-player">
   
-  <audio src="https://docs.google.com/uc?export=download&id=1-kkwr7G802g1S-L4ELS7j8lNxWnbyj7O"></audio>
+  <audio src="https://docs.google.com/uc?export=download&id=1O93R5FPEicX_6OKirOBdzigd7IPHYSZ6"></audio>
   <div class="controls">
     <button class="player-button">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="#ffffff">
@@ -433,7 +433,7 @@ color: #ffffff;
           </script>
           <script>
             function ost() {
-              window.open("https://drive.google.com/file/d/1-kkwr7G802g1S-L4ELS7j8lNxWnbyj7O/view?usp=sharing");
+              window.open("https://drive.google.com/file/d/1O93R5FPEicX_6OKirOBdzigd7IPHYSZ6/view?usp=sharing");
             }
             </script>
 </body>
